# ft_ls

./: CMakeLists.txt  Makefile  a.out  auxiliary.c  files.c  ft_ls  ft_ls.h  main.c  major.c  mauxiliary.c  new_ls.c  newsort.c  print.c  qwertyuiopasdfgha  rightstypes.c
example/: CMakeLists.txt  main.c
ft_ls/: CMakeLists.txt  Makefile  auxiliary.c  ft_ls  ft_ls.h  ft_printf.h  ls_sorts.c  main.c  major.c  mauxiliary.c  rightstypes.c
ft_ls/ft_printf/: auxiliary.c  procwidth.c
ft_ls/ft_printf/libft/: ft_strnew.c  ft_strsplit.c  ft_strsub.c  libft.h
ft_ls/libft/: Makefile  ft_strdup.c  ft_strjoin.c  ft_strsplit.c  ft_strsub.c  libft.h
ft_printf/: CMakeLists.txt  Makefile  auxiliary.c  flags.c  ft_printf.h  main.c  num_flags.c
ft_printf/include/: ft_printf.h
ft_printf/libft/: Makefile  Makefile3  ft_itoa.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c
ft_printf/libft/includes/: libft.h
ft_printf/sources/: auxiliary.c  ft_printf.c  num_flags.c  printhex.c  putsymb.c
header/: ft_ls.h
hello/: 4testwidthoflso.txt
libft/: Makefile  Makefile2  ft_multjoin.c  ft_pwrbase.c  ft_rfstr.c  ft_strchr.c  ft_strjoin.c  ft_strnew.c  ft_strsplit.c  ft_strsub.c  ft_swap.c  libft.h
libft/includes/: libft.h
ls-R/: CMakeLists.txt  main.c
untitled/: main.c
untitled1/: main.c
